--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/ChatGPT Image Apr 28, 2025, 07_58_21 PM.png" />
-    <link rel="preload" as="image" href="./src/assets/futuristic-half-robot-tiger-nature.jpg" />
-    <link rel="preload" as="image" href="./src/assets/neon-hologram-tiger.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/ChatGPT Image Apr 28, 2025, 07_58_21 PM.webp" />
+    <link rel="preload" as="image" href="./src/assets/futuristic-half-robot-tiger-nature.webp" />
+    <link rel="preload" as="image" href="./src/assets//neon-hologram-tiger.webp" />
+    <link rel="preload" as="image" href="./src/assets/nature-landscape-with-black-sand-beach.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
